// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. macros: 1. macros 1`] = `
"
import { flatMap } from 'data-manager';
import normalize from '../normalize.macro';

const b = 'b';
const d = 'd';

flatMap(normalize({
  a: 'a',
  b,
  y: {
    columns: ['c', d],
    category: 'type'
  }
}));

      ↓ ↓ ↓ ↓ ↓ ↓

import { flatMap } from 'data-manager';
const b = 'b';
const d = 'd';
flatMap(row => {
  return [{
    a: row['a'],
    b: row[b],
    y: row['c'],
    'type': 'c'
  }, {
    a: row['a'],
    b: row[b],
    y: row[d],
    'type': d
  }];
});
"
`;

exports[`macros 2. macros: 2. macros 1`] = `
"
import { flatMap } from 'data-manager';
import normalize from '../normalize.macro';

const b = 'b';

flatMap(normalize({
  a: 'a',
  b,
  y: {
    columns: ['c', 'd'],
    categories: {
      c: { isC: true, isD: false },
      d: { isC: false, isD: true },
    }
  }
}));

      ↓ ↓ ↓ ↓ ↓ ↓

import { flatMap } from 'data-manager';
const b = 'b';
flatMap(row => {
  return [{
    a: row['a'],
    b: row[b],
    y: row['c'],
    isC: true,
    isD: false
  }, {
    a: row['a'],
    b: row[b],
    y: row['d'],
    isC: false,
    isD: true
  }];
});
"
`;

exports[`macros 3. macros: 3. macros 1`] = `
"
import { flatMap } from 'data-manager';
import normalize from '../normalize.macro';

const b = 'b';
const f = 'f';

flatMap(normalize(
  {
    a: 'a',
    b,
    y: {
      columns: ['c', 'd'],
      categories: {
        c: { isC: true, isD: false },
        d: { isC: false, isD: true },
      }
    }
  },
  ['e', f]
));

      ↓ ↓ ↓ ↓ ↓ ↓

import { flatMap } from 'data-manager';
const b = 'b';
const f = 'f';
flatMap(row => {
  return [{
    a: row['a'],
    b: row[b],
    y: row['c'],
    isC: true,
    isD: false,
    'e': row['e'],
    [f]: row[f]
  }, {
    a: row['a'],
    b: row[b],
    y: row['d'],
    isC: false,
    isD: true,
    'e': row['e'],
    [f]: row[f]
  }];
});
"
`;

exports[`macros 4. macros: 4. macros 1`] = `
"
import { flatMap } from 'data-manager';
import normalize from '../normalize.macro';

const b = 'b';
const f = 'f';

flatMap(normalize(
  {
    a: 'a',
    b,
    y: {
      columns: ['c', 'd'],
      categories: {
        c: { isC: true, isD: false },
        d: { isC: false, isD: true },
      }
    }
  },
  'e', f
));

      ↓ ↓ ↓ ↓ ↓ ↓

import { flatMap } from 'data-manager';
const b = 'b';
const f = 'f';
flatMap(row => {
  return [{
    a: row['a'],
    b: row[b],
    y: row['c'],
    isC: true,
    isD: false,
    'e': row['e'],
    [f]: row[f]
  }, {
    a: row['a'],
    b: row[b],
    y: row['d'],
    isC: false,
    isD: true,
    'e': row['e'],
    [f]: row[f]
  }];
});
"
`;
